--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,10 @@ steps:
   displayName: 'Use .NET SDK $(dotnetSdkVersion)'
   inputs:
     version: '$(dotnetSdkVersion)'
+- task: NodeTool@0
+  inputs:
+        versionSpec: '6.x'
+        checkLatest: true
 
 - task: Npm@1
   displayName: 'Run npm install'
